--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,8 @@ jobs:
         run: |
           mkdir generated_data && cd generated_data
           ../dbgen -f -s 0.01 -T a -b ../dists.dss
+          diff ../sample_data_sf-0.01/customer.tbl customer.tbl
+          diff ../sample_data_sf-0.01/date.tbl date.tbl
+          diff ../sample_data_sf-0.01/lineorder.tbl lineorder.tbl
+          diff ../sample_data_sf-0.01/part.tbl part.tbl
+          diff ../sample_data_sf-0.01/supplier.tbl supplier.tbl
